# polilith

./: Cargo.toml  LICENSE  README.md  busybox-1.32.0.tar
.github/workflows/: rust.yml
scripts/: raw_test.sh
src/: algo.rs  docker.rs  main.rs  rules.rs  sarif.rs
tests/: can_load_simple.rs
