[package]
name = "polilith"
version = "0.1.3"
authors = ["Damien Carol <damien.carol@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Docker image quality tool"
repository = "https://github.com/damiencarol/polilith.git"
license = "Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
tar = "0.4.30"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
clap = "2.33.3"
regex = "1.5.5"
